<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <fragment
        android:id="@+id/scorefragment"
        android:name="yr.jeuechecs.affichage.ScoreFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/score_fragment" />

    <fragment
        android:id="@+id/tablefragment"
        android:name="yr.jeuechecs.affichage.TableJeuFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/table_jeu_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            style="?android:attr/imageButtonStyle"
            android:id="@+id/button_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/go_forward" />

        <Button
            style="?android:attr/imageButtonStyle"
            android:id="@+id/button_initialiser"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/reset" />

        <Button
            style="?android:attr/imageButtonStyle"
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/go_back" />
    </LinearLayout>

</LinearLayout>